svc-app02.yaml
kind: Service
apiVersion: v1
metadata:
  name: app02-svc
  namespace: app02
  labels:
    app: httpd
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: app02
    deployment: httpd-app02
