route-app02.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo
  namespace: app02
  labels:
    app: httpd
spec:
  to:
    kind: Service
    name: app02-svc
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
